    This bug has been in XINS since version 0.207.
  - Previously the 'create-logdoc' target generated the domain and
    default-locale attributes in the log.xml file. This is now fixed.
  - The generated javadoc for the API now shows the package-private members as
    well.
  - The files created with the "create" targets have now the correct OS
    linefeed character(s).

* Build and release process:
  - Added the possibility to release with a specific version
    (e.g. 1.0.0-beta2).
  - Added the help target that provides help for the main targets.
  - Removed the sfaddrelease target.

* DTD:
  - Moved the pcdata-example after the attribute-example.
  - Removed the multiplicity attribute from the DTD as it is not used for
    the code generation.

* Generic XSLT include files:
  - Removed support for the 'extends' attribute in type classes.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.208:                                (1.0.0-beta1)

* XINS/Java Common Library:
  - Added the remove() method in ProtectedPropertyReader. The set() method
    does not remove the property anymore if the value is null.
  - Changed HTTPServiceCaller handling of input parameters. If a parameter
    value is null, then the parameter is now passed down, with the empty
    string as the value. Previously the parameter would not be sent down at
    all.
  - Added 'failOverAllowed' property to HTTPCallRequest. If this flag is set,
    then fail-over is always allowed.

* XINS/Java Client Framework:
  - Applied some refactorings and improved documentation.

* Logdoc
  - Removed unused log entries.

* Generated specification documentation:
  - Fixed the API owner is now printed correctly on the API page.
    This bug has been in XINS since version 0.207.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 0.207:

* XINS/Java Server Framework: